module(
    name = "direct_line",
    version = "0.1.0",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "lint_it_all", version = "0.0.0")
git_override(
    module_name = "lint_it_all",
    commit = "15209d6476ddf81173e38f609ca6d9df3afa92eb",
    remote = "https://github.com/agoessling/lint_it_all.git",
)

bazel_dep(name = "toolchains_arm_gnu", version = "1.0.3")

arm_toolchain = use_extension("@toolchains_arm_gnu//:extensions.bzl", "arm_toolchain")
arm_toolchain.arm_none_eabi(version = "13.2.1")
use_repo(arm_toolchain, "arm_none_eabi")

register_toolchains("//tools/toolchains:all")

bazel_dep(name = "reg_def", version = "0.1.0")
local_path_override(
    module_name = "reg_def",
    path = "../reg_def",
)

http_archive(
    name = "freertos_kernel",
    build_file = "//third_party/freertos:kernel.BUILD",
    sha256 = "eebd58aa71a623c9381f25f77b708c0ed14ef995a8913e2460fe9f286bb271eb",
    strip_prefix = "FreeRTOS-KernelV11.1.0",
    url = "https://github.com/FreeRTOS/FreeRTOS-Kernel/releases/download/V11.1.0/FreeRTOS-KernelV11.1.0.zip",
)

http_archive(
    name = "ti_simplelink",
    build_file = "//third_party/ti:simplelink.BUILD",
    sha256 = "6ca764a668a0b804383e7407a792c1b1b944c9b428712c64dc46782f02cecc12",
    strip_prefix = "simplelink-lowpower-f2-sdk-lpf2-7.41.00.17",
    url = "https://github.com/TexasInstruments/simplelink-lowpower-f2-sdk/archive/refs/tags/lpf2-7.41.00.17.zip",
)

# BEGIN ==================== lint_it_all ====================
lia_http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc8", dev_dependency = True)
bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain_llvm")

lia_http_archive(
    name = "ruff",
    build_file_content = "exports_files(['ruff'])",
    sha256 = "072370a5a3f72decdb0039a8c23c89a6982459fac128a368266d0b03933095ce",
    strip_prefix = "ruff-i686-unknown-linux-gnu",
    url = "https://github.com/astral-sh/ruff/releases/download/0.5.5/ruff-i686-unknown-linux-gnu.tar.gz",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
# END ==================== lint_it_all ====================
